cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0
synopsis:           Haskell solutions to Advent of Code 2021

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT
author:             Leo Orpilla III
maintainer:         dev@ldgrp.me

-- A copyright notice.
-- copyright:
-- category:

executable day01
    main-is:          day01.hs
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day02
    main-is:          day02.hs
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day03
    main-is:          day03.hs
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day04
    main-is:          day04.hs
    build-depends:    base ^>=4.16.0.0, split
    hs-source-dirs:   src
    default-language: Haskell2010
